--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SafeCam - Hems Trans Limited</title>
+    <title>Hems Trans Limited</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -35,7 +35,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
         <a href="index.html" class="navbar-brand ms-lg-5">
-            <h1 class="display-5 m-0 text-primary">HemsTrans<span class="text-secondary"> Limited</span></h1>
+            <h1 class="display-5 m-0 text-primary">HemsTrans<span class="text-secondary"> </span></h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
                 <a href="about.html" class="nav-item nav-link active">About</a>
                 <a href="service.html" class="nav-item nav-link">Service</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Collections</a>
                     <div class="dropdown-menu m-0">
                         <a href="team.html" class="dropdown-item">Gallery</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
@@ -86,10 +86,10 @@
                 <div class="col-lg-7">
                     <div class="mb-4">
                         <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">About Us</h5>
-                        <h1 class="display-5 mb-0">We Offers Quality Security Cameras & Computer Sell,Repair Services</h1>
+                        <h1 class="display-5 mb-0">We Offers Quality Security Cameras & Computer Services & Mobile phone maintenance</h1>
                     </div>
                     <h4 class="text-body fst-italic mb-4">We Install Security cameras for Companies And Houses Including Flats And Restaurants And Shops 
-                        I Install Their Cameras Which Is Connected To Their Telefones With High Resolution Of Picture And Memory Data We Also Install Computers System From Zero And Also Repair Computer Parts</h4>
+                        I Install Their Cameras Which Is Connected To Their Telefones With High Resolution Of Picture And Memory Data We Also Install Computers System From Zero And Also Repair Computer Parts And Mobiles Parts</h4>
                     <p class="mb-4">Make Your Security Safe With Us</p>
                     <div class="row g-3">
                         <div class="col-sm-6 wow zoomIn" data-wow-delay="0.6s">
@@ -98,12 +98,12 @@
                                 <h4 class="text-white mb-0">2 Years Experience</h4>
                             </div>
                         </div>
-                        <div class="col-sm-6 wow zoomIn" data-wow-delay="0.9s">
+                        <!-- <div class="col-sm-6 wow zoomIn" data-wow-delay="0.9s">
                             <div class="bg-secondary d-flex flex-column justify-content-center text-center border-bottom border-5 border-primary rounded p-3" style="height: 200px;">
                                 <i class="fa fa-award fa-4x text-white mb-4"></i>
                                 <h4 class="text-white mb-0">Award Winning</h4>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -123,18 +123,18 @@
         </div>
     </div>
 </div>
-<div class="container-fluid bg-primary text-light py-4">
+<!-- <div class="container-fluid bg-primary text-light py-4">
     <div class="container">
         <div class="row g-5">
             <div class="col-md-6 text-center text-md-start">
-                <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">Hems Trans Limited</a>. All Rights Reserved. 2024&copy;</p>
+                <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">Hems Trans Limited Inc.</a>. All Rights Reserved. 2024&copy;</p>
             </div>
             <div class="col-md-6 text-center text-md-end">
                 <p class="mb-0">Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">VGA</a></p>
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Footer End -->
 
 
