--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SafeCam - Hems Trans Limited</title>
+    <title>Hems Trans Limited</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -35,7 +35,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
         <a href="index.html" class="navbar-brand ms-lg-5">
-            <h1 class="display-5 m-0 text-primary">HemsTrans<span class="text-secondary"> Limited</span></h1>
+            <h1 class="display-5 m-0 text-primary">HemsTrans<span class="text-secondary"> </span></h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link active">Service</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Collections</a>
                     <div class="dropdown-menu m-0">
                         <a href="team.html" class="dropdown-item">Gallery</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
@@ -79,7 +79,7 @@
     <div class="container">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
             <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">Services</h5>
-            <h1 class="display-5 mb-0">Our Excellent Security cameras Services</h1>
+            <h1 class="display-5 mb-0">Security Cameras Services</h1>
         </div>
         <div class="row g-5">
             <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
@@ -158,7 +158,7 @@
     <div class="container">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
             <!-- <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">Services</h5> -->
-            <h1 class="display-5 mb-0">Our Excellent Computer Services</h1>
+            <h1 class="display-5 mb-0">Computer Services</h1>
         </div>
         <div class="row g-5">
             <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
@@ -220,6 +220,60 @@
         </div>
     </div>
 </div>
+<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container">
+        <div class="text-center mx-auto mb-5" style="max-width: 600px;">
+            <!-- <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">Services</h5> -->
+            <h1 class="display-5 mb-0">Mobile Services</h1>
+        </div>
+        <div class="row g-5">
+            <!-- <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+                <div class="service-item bg-light border-bottom border-5 border-primary rounded">
+                    <div class="position-relative p-5">
+                        <i class="d-block display-1 fw-normal text-secondary mb-3"></i>
+                         <h5 class="text-primary mb-0">CCTV</h5> 
+                        <h3 class="mb-3">Installation</h3>
+                        <p>Take the appropriate pieces that work with high efficiency and speed</p>
+                         <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> 
+                    </div>
+                </div>
+            </div> -->
+            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+                <div class="service-item bg-light border-bottom border-5 border-primary rounded">
+                    <div class="position-relative p-5">
+                        <i class="d-block display-1 fw-normal text-secondary mb-3"></i>
+                        <!-- <h5 class="text-primary mb-0">CCTV</h5> -->
+                        <h3 class="mb-3">Repair</h3>
+                        <p>Identify the problem of any part so it can be repaired or replaced</p>
+                        <!-- <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
+                <div class="service-item bg-light border-bottom border-5 border-primary rounded">
+                    <div class="position-relative p-5">
+                        <i class="d-block display-1 fw-normal text-secondary mb-3"></i>
+                        <!-- <h5 class="text-primary mb-0">CCTV</h5> -->
+                        <h3 class="mb-3">Software</h3>
+                        <p>Download all programs, updates, and drivers for mobiles</p>
+                        <!-- <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+                <div class="service-item bg-light border-bottom border-5 border-primary rounded">
+                    <div class="position-relative p-5">
+                        <i class=" d-block display-1 fw-normal text-secondary mb-3"></i>
+                        <!-- <h5 class="text-primary mb-0">CCTV</h5> -->
+                        <h3 class="mb-3">Hardware</h3>
+                        <p>Checking all the parts in case there's a part need to be repaired or replaced</p>
+                        <!-- <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> -->
+                    </div>
+                </div>
+            </div>               
+        </div>
+    </div>
+</div>
   <!-- Footer Start -->
   <div class="container-fluid bg-dark text-light mt-5 py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container pt-5">
@@ -233,18 +287,18 @@
         </div>
     </div>
 </div>
-<div class="container-fluid bg-primary text-light py-4">
+<!-- <div class="container-fluid bg-primary text-light py-4">
     <div class="container">
         <div class="row g-5">
             <div class="col-md-6 text-center text-md-start">
-                <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">Hems Trans Limited</a>. All Rights Reserved. 2024&copy;</p>
+                <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">Hems Trans Limited Inc.</a>. All Rights Reserved. 2024&copy;</p>
             </div>
             <div class="col-md-6 text-center text-md-end">
                 <p class="mb-0">Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">VGA</a></p>
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Footer End -->
 
 
