--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SafeCam - Hems Trans Limited</title>
+    <title>Hems Trans Limited</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -35,7 +35,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
         <a href="index.html" class="navbar-brand ms-lg-5">
-            <h1 class="display-5 m-0 text-primary">HemsTrans<span class="text-secondary"> Limited</span></h1>
+            <h1 class="display-5 m-0 text-primary">HemsTrans<span class="text-secondary"> </span></h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Service</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Collections</a>
                     <div class="dropdown-menu m-0">
                         <a href="team.html" class="dropdown-item">Gallery</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
@@ -84,8 +84,8 @@
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h5 class="text-white text-uppercase animated bounceInDown">Best Security Services</h5>
-                            <h1 class="display-1 text-white mb-md-4 animated zoomIn">Safe & Secure companies</h1>
+                            <h5 class="text-white text-uppercase animated bounceInDown">Best Services</h5>
+                            <h1 class="display-1 text-white mb-md-4 animated zoomIn">Security Camera & Mobile & Computer maintenance</h1>
                             <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a>
                             <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a> -->
                         </div>
@@ -130,10 +130,10 @@
                 <div class="col-lg-7">
                     <div class="mb-4">
                         <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">About Us</h5>
-                        <h1 class="display-5 mb-0">We Offers Quality Security Cameras & Computer Sell,Repair Services</h1>
+                        <h1 class="display-5 mb-0">We Offers Quality Security Cameras & Computer Services & Mobile phone maintenance</h1>
                     </div>
                     <h4 class="text-body fst-italic mb-4">We Install Security cameras for Companies And Houses Including Flats And Restaurants And Shops 
-                        I Install Their Cameras Which Is Connected To Their Telefones With High Resolution Of Picture And Memory Data We Also Install Computers System From Zero And Also Repair Computer Parts</h4>
+                        We Install Their Cameras Which Is Connected To Their Telefones With High Resolution Of Picture And Memory Data We Also Install Computers System From Zero And Also Repair Computer Parts And Mobiles Parts</h4>
                     <p class="mb-4">Make Your Security Safe With Us</p>
                     <div class="row g-3">
                         <div class="col-sm-6 wow zoomIn" data-wow-delay="0.6s">
@@ -142,12 +142,12 @@
                                 <h4 class="text-white mb-0">2 Years Experience</h4>
                             </div>
                         </div>
-                        <div class="col-sm-6 wow zoomIn" data-wow-delay="0.9s">
+                        <!-- <div class="col-sm-6 wow zoomIn" data-wow-delay="0.9s">
                             <div class="bg-secondary d-flex flex-column justify-content-center text-center border-bottom border-5 border-primary rounded p-3" style="height: 200px;">
                                 <i class="fa fa-award fa-4x text-white mb-4"></i>
                                 <h4 class="text-white mb-0">Award Winning</h4>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -161,7 +161,7 @@
         <div class="container">
             <div class="text-center mx-auto mb-5" style="max-width: 600px;">
                 <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">Services</h5>
-                <h1 class="display-5 mb-0">Our Excellent Security cameras Services</h1>
+                <h1 class="display-5 mb-0">Security Cameras Services</h1>
             </div>
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
@@ -230,6 +230,126 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="text-center mx-auto mb-5" style="max-width: 600px;">
+                <!-- <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">Services</h5> -->
+                <h1 class="display-5 mb-0">Computer Services</h1>
+            </div>
+            <div class="row g-5">
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+                    <div class="service-item bg-light border-bottom border-5 border-primary rounded">
+                        <div class="position-relative p-5">
+                            <i class="d-block display-1 fw-normal text-secondary mb-3"></i>
+                            <!-- <h5 class="text-primary mb-0">CCTV</h5> -->
+                            <h3 class="mb-3">Installation</h3>
+                            <p>Take the appropriate pieces that work with high efficiency and speed</p>
+                            <!-- <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+                    <div class="service-item bg-light border-bottom border-5 border-primary rounded">
+                        <div class="position-relative p-5">
+                            <i class="d-block display-1 fw-normal text-secondary mb-3"></i>
+                            <!-- <h5 class="text-primary mb-0">CCTV</h5> -->
+                            <h3 class="mb-3">Repair</h3>
+                            <p>Identify the problem of any part so it can be repaired or replaced</p>
+                            <!-- <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
+                    <div class="service-item bg-light border-bottom border-5 border-primary rounded">
+                        <div class="position-relative p-5">
+                            <i class="d-block display-1 fw-normal text-secondary mb-3"></i>
+                            <!-- <h5 class="text-primary mb-0">CCTV</h5> -->
+                            <h3 class="mb-3">Software</h3>
+                            <p>Download all programs, updates, and drivers compatible with the computer</p>
+                            <!-- <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+                    <div class="service-item bg-light border-bottom border-5 border-primary rounded">
+                        <div class="position-relative p-5">
+                            <i class=" d-block display-1 fw-normal text-secondary mb-3"></i>
+                            <!-- <h5 class="text-primary mb-0">CCTV</h5> -->
+                            <h3 class="mb-3">Hardware</h3>
+                            <p>Installing all the parts in case you want to develop your computer</p>
+                            <!-- <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+                    <div class="service-item bg-light border-bottom border-5 border-primary rounded">
+                        <div class="position-relative p-5">
+                            <i class=" d-block display-1 fw-normal text-secondary mb-3"></i>
+                            <!-- <h5 class="text-primary mb-0">CCTV</h5> -->
+                            <h3 class="mb-3">Sell</h3>
+                            <p>We sell spair  parts for customers like hard disks keyboards and screens </p>
+                            <!-- <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> -->
+                        </div>
+                    </div>
+                </div>
+               
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container">
+            <div class="text-center mx-auto mb-5" style="max-width: 600px;">
+                <!-- <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">Services</h5> -->
+                <h1 class="display-5 mb-0">Mobile Services</h1>
+            </div>
+            <div class="row g-5">
+                <!-- <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+                    <div class="service-item bg-light border-bottom border-5 border-primary rounded">
+                        <div class="position-relative p-5">
+                            <i class="d-block display-1 fw-normal text-secondary mb-3"></i>
+                             <h5 class="text-primary mb-0">CCTV</h5> 
+                            <h3 class="mb-3">Installation</h3>
+                            <p>Take the appropriate pieces that work with high efficiency and speed</p>
+                             <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> 
+                        </div>
+                    </div>
+                </div> -->
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+                    <div class="service-item bg-light border-bottom border-5 border-primary rounded">
+                        <div class="position-relative p-5">
+                            <i class="d-block display-1 fw-normal text-secondary mb-3"></i>
+                            <!-- <h5 class="text-primary mb-0">CCTV</h5> -->
+                            <h3 class="mb-3">Repair</h3>
+                            <p>Identify the problem of any part so it can be repaired or replaced</p>
+                            <!-- <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
+                    <div class="service-item bg-light border-bottom border-5 border-primary rounded">
+                        <div class="position-relative p-5">
+                            <i class="d-block display-1 fw-normal text-secondary mb-3"></i>
+                            <!-- <h5 class="text-primary mb-0">CCTV</h5> -->
+                            <h3 class="mb-3">Software</h3>
+                            <p>Download all programs, updates, and drivers for mobiles</p>
+                            <!-- <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+                    <div class="service-item bg-light border-bottom border-5 border-primary rounded">
+                        <div class="position-relative p-5">
+                            <i class=" d-block display-1 fw-normal text-secondary mb-3"></i>
+                            <!-- <h5 class="text-primary mb-0">CCTV</h5> -->
+                            <h3 class="mb-3">Hardware</h3>
+                            <p>Checking all the parts in case there's a part need to be repaired or replaced</p>
+                            <!-- <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> -->
+                        </div>
+                    </div>
+                </div>               
             </div>
         </div>
     </div>
@@ -319,10 +439,10 @@
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-7 text-center">
                     <div class="text-center mx-auto mb-4" style="max-width: 600px;">
-                        <h5 class="text-white text-uppercase" style="letter-spacing: 5px;">Special Offer</h5>
-                        <h1 class="display-5 text-white">Save 20% On Security Camera With Your First Order</h1>
+                        <h5 class="text-white text-uppercase" style="letter-spacing: 5px;">installing Security Camera or upgrading it ,Installing Computer HardWare And Software And we sell spair parts like hard disks keyboards and screens.  </h5>
+                        <h1 class="display-5 text-white"></h1>
                     </div>
-                    <p class="text-white mb-4">installing a new security system or upgrading, our security experts can help. We'll determine the most suitable option for your building, making sure they operate and integrate seamlessly.</p>
+                    <p class="text-white mb-4"> We'll Earn Your Trust   .</p>
                     <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3">Order Now</a> -->
                     <!-- <a href="" class="btn btn-secondary py-md-3 px-md-5">Read More</a> -->
                 </div>
@@ -502,18 +622,18 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid bg-primary text-light py-4">
+    <!-- <div class="container-fluid bg-primary text-light py-4">
         <div class="container">
             <div class="row g-5">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">Hems Trans Limited</a>. All Rights Reserved. 2024&copy;</p>
+                    <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">Hems Trans Limited Inc.</a>. All Rights Reserved. 2024&copy;</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <p class="mb-0">Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">VGA</a></p>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Footer End -->
 
 
