--- a/testimonial.html
+++ b/testimonial.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SafeCam - Hems Trans Limited</title>
+    <title>Hems Trans Limited</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -35,7 +35,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
         <a href="index.html" class="navbar-brand ms-lg-5">
-            <h1 class="display-5 m-0 text-primary">HemsTrans<span class="text-secondary"> Limited</span></h1>
+            <h1 class="display-5 m-0 text-primary">HemsTrans<span class="text-secondary"> </span></h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Service</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Collections</a>
                     <div class="dropdown-menu m-0">
                         <a href="team.html" class="dropdown-item">Gallery</a>
                         <a href="testimonial.html" class="dropdown-item active">Testimonial</a>
@@ -133,18 +133,18 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid bg-primary text-light py-4">
+    <!-- <div class="container-fluid bg-primary text-light py-4">
         <div class="container">
             <div class="row g-5">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">Hems Trans Limited</a>. All Rights Reserved. 2024&copy;</p>
+                    <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">Hems Trans Limited Inc.</a>. All Rights Reserved. 2024&copy;</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <p class="mb-0">Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">VGA</a></p>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Footer End -->
 
 
